# pypkg

./: .build.yml  .gitignore  LICENSE  MANIFEST.in  Makefile  NEWS.md  NEWS.org  NEWS.rst  README  README.md  README.org  README.rst  TODO.org  TODO.rst  mkdocs.yml  pypkg.py  setup.cfg
.github/workflows/: run-ci.yml
conf/: Makefile  Mkdeps.py  config.mk  constraints.txt  dev-requirements.txt  requirements-dev.in  requirements-dev.txt  requirements-doc.in  requirements-test.in  requirements-test.txt  requirements.in  requirements.mk  requirements.py  requirements.txt  version.cfg
docs/: exp.md  howto.md  index.md  ref.md  tut.md
src/pypkg/: __init__.py  __main__.py  cli.py  config.cfg  config.py  docopts.py  logger.py
tests/: Makefile  README  conftest.py  coverage.cfg  test-cli.py  test-config.cfg  test-config.py  test-pkg.py
