# TODO: customize this file

[metadata]
name = pypkg
version = attr: pypkg.__version__

description = WRITE ME
long_description = file: README.rst
long_description_content_type = text/x-rst

author = Glenn Hutchings
author_email = zondo42@gmail.com
url = https://github.com/zondo/pypkg

download_url = http://pypi.python.org/pypi/pypkg
license = BSD

classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3

[options]
packages = pypkg

package_dir = 
    = src

# TODO: set requirements
install_requires =
    docopt
    schema

[options.entry_points]
console_scripts =
    pkg = pypkg.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = True

[isort]
profile = black

[tool:pytest]
python_files = test-*.py
addopts = --doctest-glob=README.rst
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[coverage:html]
title = Coverage Report

[coverage:run]
branch = True
relative_files = True

[coverage:report]
omit = 
    **/__main__.py

exclude_lines =
    pragma: no cover
    if __name__ == .__main__.
    def __repr__

precision = 1
